--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -33,19 +33,12 @@ header:
     blox: "navbar"
     fixed_to_top: true
     show_search: true
-    show_theme_chooser: true
-    background-color: transparent
-
+    show_theme_chooser: false
 
 # Site footer
 footer:
   copyright:
-    notice: '© {year} Me. This work is licensed under {license}'
-    license:
-      enable: true
-      allow_derivatives: false
-      share_alike: true
-      allow_commercial: false
+    notice: '© {year} Tien Dung Nguyen. Image credit: Photo by Margarita Sison.'
 
 # Localization
 locale:
