--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -28,9 +28,9 @@ marketing:
 
 # Site header
 header:
-  navbar-simple:
+  navbar:
     enable: true
-    blox: "navbar"
+    blox: "navbar-simple"
     fixed_to_top: true
     show_search: true
     show_theme_chooser: false
